# bfc

./: .gitignore  CMakeLists.txt  Makefile  README.md  bf_test.bfc  builtin_code_emitters.c  code_emitters.c  code_emitters.h  code_emitters_helpers.c  configure  configure.sh  errorh_generator.py  errors.h  lang_errors  lang_spec  main.c  map.c  map.h  parser.c  parser.h  symbol.h  tokenizer.c  tokenizer.h
docs/: lang_keywords_spec.md  lang_spec  moving_trough_memory
include/: code_emitters.h  tokenizer.h
src/: main.c
src/emitters/: builtin_code_emitters.c  code_emitters.c  code_emitters_helpers.c
src/parsing/: parser.c  tokenizer.c
src/utils/: map.c
test/: bf_find_example.bfc  bf_test.bfc  bf_test_expressions.bfc  bf_test_if.bfc  bf_test_while.bfc
